--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-hook-form": "^7.53.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
+    "react-tilt": "^1.0.2",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
