--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "react-tilt": "^1.0.2",
+    "recharts": "^2.13.3",
     "styled-components": "^6.1.13",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
