--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.2",
+    "@react-three/drei": "^9.116.3",
+    "@react-three/fiber": "^8.17.10",
     "@reduxjs/toolkit": "^2.3.0",
     "@tanstack/react-table": "^8.20.5",
     "bootstrap": "^5.3.3",
@@ -38,6 +40,7 @@
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
+    "react-calendar": "^5.1.0",
     "react-datepicker": "^7.5.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -50,6 +53,7 @@
     "styled-components": "^6.1.13",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.170.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
