--- a/package.json
+++ b/package.json
@@ -50,7 +50,10 @@
     "react-router-dom": "^6.27.0",
     "react-tilt": "^1.0.2",
     "recharts": "^2.13.3",
+    "sass": "^1.81.0",
+    "scss": "^0.2.4",
     "styled-components": "^6.1.13",
+    "swiper": "^11.1.15",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.170.0",
@@ -61,6 +64,7 @@
     "@types/node": "^22.8.0",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
+    "@types/swiper": "^5.4.3",
     "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.13.0",
