--- a/package.json
+++ b/package.json
@@ -35,11 +35,13 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "dayjs": "^1.11.13",
     "firebase": "^11.0.1",
     "framer-motion": "^11.11.10",
     "lucide-react": "^0.453.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
+    "react-big-calendar": "^1.16.0",
     "react-bootstrap": "^2.10.5",
     "react-calendar": "^5.1.0",
     "react-datepicker": "^7.5.0",
@@ -64,6 +66,7 @@
     "@eslint/js": "^9.13.0",
     "@types/node": "^22.8.0",
     "@types/react": "^18.3.11",
+    "@types/react-big-calendar": "^1.16.0",
     "@types/react-dom": "^18.3.1",
     "@types/swiper": "^5.4.3",
     "@vitejs/plugin-react": "^4.3.3",
