--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "react-tilt": "^1.0.2",
+    "react-type-animation": "^3.2.0",
     "recharts": "^2.13.3",
     "sass": "^1.81.0",
     "scss": "^0.2.4",
